Fixed some bugs in Module 02

--- a/Module 02/ex02/Makefile
+++ b/Module 02/ex02/Makefile
@@ -2,19 +2,23 @@ CXX=c++
 CXXFLAGS=-Wall -Wextra -Werror -std=c++98
 SRC=main.cpp Fixed.cpp
 OBJ=main.o Fixed.o
+NAME=Fixed
 
 .PHONY:all re fclean clean
 
 %.o:%.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-all:$(OBJ)
-	$(CXX) $(CXXFLAGS) $(OBJ)
+$(NAME):$(OBJ)
+	$(CXX) $(CXXFLAGS) $(OBJ) -o $@
+
+all:$(NAME)
+	
 
 clean:
 	rm -f $(OBJ)
 
 fclean:clean
-	rm -f a.out
+	rm -f $(NAME)
 
 re:fclean all
