--- a/Module 03/ex00/Makefile
+++ b/Module 03/ex00/Makefile
@@ -2,19 +2,23 @@ CXX=c++
 CXXFLAGS=-Wall -Wextra -Werror -std=c++98
 SRC=ClapTrap.cpp main.cpp
 OBJ=ClapTrap.o main.o
+NAME=flap
 
 .PHONY: all re fclean clean
 
 %.o:%.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-all:$(OBJ)
-	$(CXX) $(CXXFLAGS) $(OBJ)
+$(NAME):$(OBJ)
+	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
+
+all:$(NAME)
+
 
 clean:
 	rm -f $(OBJ)
 
 fclean:clean
-	rm -f a.out
+	rm -f $(NAME)
 
 re:fclean all
