--- a/Module 08/ex02/Makefile
+++ b/Module 08/ex02/Makefile
@@ -1,9 +1,9 @@
 SRC=main.cpp
 OBJ=$(SRC:.cpp=.o)
-HEADER=easyfind.hpp
+HEADER=MutantStack.hpp
 CXX=c++
 CXXFLAGS=-Wall -Wextra -Werror -std=c++98
-NAME=temp
+NAME=Span
 
 .PHONY:all re fclean clean
 
